# dotfiles

./: .Brewfile  .Brewfile.lock.json  .Xmodmap  .Xresources  .ageboxreg.yml  .ansible.cfg  .asoundrc  .bash_defaults  .bash_profile  .bashrc  .bcrc  .dir_colors  .duti  .fzf  .gitconfig  .gitignore  .gitignore.global  .gitignore_global  .gitmodules  .ideavimrc  .inputrc  .npmrc.global  .oh-my-zsh  .pacman  .ripgreprc  .skhdrc  .sqliterc  .stow-local-ignore  .tigrc  .tmux.conf  .tool-versions  .tridactylrc  .xinitrc  .xprofile  .xsession  .yabairc  .zshenv  .zshrc  Brewfile  Dockerfile  (+20 more)
.bin/: @  _prompt_pwd  _update_src  _utils.bash  _utils.sh  agebox.commit  agebox.decrypt  agebox.encryptdir  agebox.reencrypt  alacritty.color  alacritty.opacity  argo.install  aria  aria2c.withcookies  asdf.rm  asdf.use  ask  aws  awsctx  backlight  backlight.down  backlight.up  bak  battery.sh  bcrypt.generate  bluetooth.connect  brew.install  bspc.center  bspwm.source  buds  caddy.download  calc.sum  capture  cbi  cbo  cdktf.import  ci  click.mouse  cloud-localds  command_exists  (+263 more)
.bin/.dead/: newscript.sh
.claude/: CLAUDE.md
.config/: chrome-flags.conf  electron17-flags.conf  grobi.conf  mimeapps.list
.config.bak/: chromium-flags.conf  rmview.json
.elvish/: rc.elv
.githooks/: pre-commit
.hammerspoon/: init.lua  macro.lua  spoon.lua
.local/share/nvim/site/pack/bundle/opt/fff.nvim/: .gitignore  .gitrepo  .luacheckrc  .luarc.ci.json  .luarc.json  .mcp.json  .nixignore  Cargo.toml  LICENSE  Makefile  README.md  _typos.toml  biome.json  empty_config.lua  flake.nix  install-mcp.sh  package-lock.json  package.json  rust-toolchain.toml
.local/share/nvim/site/pack/bundle/opt/fff.nvim/.cargo/: config.toml
.local/share/nvim/site/pack/bundle/opt/fff.nvim/.github/workflows/: external-tests.yml  lua.yml  nix.yml  panvimdoc.yaml  release.yaml  rust.yml  spelling.yaml  stylua.yaml
.local/share/nvim/site/pack/bundle/opt/fff.nvim/crates/fff-c/: Cargo.toml  cbindgen.toml
.local/share/nvim/site/pack/bundle/opt/fff.nvim/crates/fff-c/include/: fff.h
.local/share/nvim/site/pack/bundle/opt/fff.nvim/crates/fff-c/src/: accessors.rs  ffi_types.rs  lib.rs
.local/share/nvim/site/pack/bundle/opt/fff.nvim/crates/fff-core/: Cargo.toml  README.md  build.rs
.local/share/nvim/site/pack/bundle/opt/fff.nvim/crates/fff-core/benches/: bigram_bench.rs  memmem_bench.rs
.local/share/nvim/site/pack/bundle/opt/fff.nvim/crates/fff-core/src/: background_watcher.rs  bigram_filter.rs  bigram_query.rs  case_insensitive_memmem.rs  constraints.rs  db_healthcheck.rs  error.rs  file_picker.rs  frecency.rs  git.rs  grep.rs  ignore.rs  lib.rs  log.rs  path_utils.rs  query_tracker.rs  score.rs  shared.rs  simd_path.rs  sort_buffer.rs  types.rs
.local/share/nvim/site/pack/bundle/opt/fff.nvim/crates/fff-core/tests/: bigram_overlay_coherence_test.rs  bigram_overlay_integration.rs  fs_delete_handler_test.rs  fuzz_file_operations.rs  grep_integration.rs  new_directory_watcher_test.rs
.local/share/nvim/site/pack/bundle/opt/fff.nvim/crates/fff-grep/: Cargo.toml
.local/share/nvim/site/pack/bundle/opt/fff.nvim/crates/fff-grep/src/: lib.rs  lines.rs  matcher.rs  sink.rs
.local/share/nvim/site/pack/bundle/opt/fff.nvim/crates/fff-grep/src/searcher/: core.rs  glue.rs  mod.rs
.local/share/nvim/site/pack/bundle/opt/fff.nvim/crates/fff-mcp/: Cargo.toml  build.rs
.local/share/nvim/site/pack/bundle/opt/fff.nvim/crates/fff-mcp/src/: cursor.rs  healthcheck.rs  main.rs  output.rs  server.rs  update_check.rs
.local/share/nvim/site/pack/bundle/opt/fff.nvim/crates/fff-nvim/: Cargo.toml
.local/share/nvim/site/pack/bundle/opt/fff.nvim/crates/fff-nvim/benches/: grep_bench.rs  indexing_and_search.rs  query_tracker_bench.rs
.local/share/nvim/site/pack/bundle/opt/fff.nvim/crates/fff-nvim/src/: error.rs  hex_dump.rs  lib.rs  log.rs  lua_types.rs  path_shortening.rs
.local/share/nvim/site/pack/bundle/opt/fff.nvim/crates/fff-query-parser/: Cargo.toml
.local/share/nvim/site/pack/bundle/opt/fff.nvim/crates/fff-query-parser/benches/: parse_bench.rs
.local/share/nvim/site/pack/bundle/opt/fff.nvim/crates/fff-query-parser/src/: config.rs  constraints.rs  glob_detect.rs  lib.rs  location.rs  parser.rs
.local/share/nvim/site/pack/bundle/opt/fff.nvim/doc/: fff.nvim.txt  tags
.local/share/nvim/site/pack/bundle/opt/fff.nvim/lua/: fff.lua
.local/share/nvim/site/pack/bundle/opt/fff.nvim/lua/fff/: combo_renderer.lua  conf.lua  core.lua  download.lua  file_renderer.lua  fuzzy.lua  git_utils.lua  health.lua  list_renderer.lua  location_utils.lua  main.lua  picker_ui.lua  scrollbar.lua  treesitter_hl.lua  utils.lua
.local/share/nvim/site/pack/bundle/opt/fff.nvim/lua/fff/file_picker/: icons.lua  image.lua  init.lua  preview.lua
.local/share/nvim/site/pack/bundle/opt/fff.nvim/lua/fff/grep/: grep_renderer.lua  init.lua
.local/share/nvim/site/pack/bundle/opt/fff.nvim/lua/fff/rust/: init.lua
.local/share/nvim/site/pack/bundle/opt/fff.nvim/lua/fff/utils/: fs.lua  system.lua  version.lua
.local/share/nvim/site/pack/bundle/opt/fff.nvim/plugin/: fff.lua
.local/share/nvim/site/pack/bundle/opt/fff.nvim/scripts/: analyze-results.py  benchmark-claude.sh  determine-version.lua  release.sh
.local/share/nvim/site/pack/bundle/opt/fff.nvim/tests/: clear_cache_spec.lua  fff_core_spec.lua  minimal_init.lua  picker_dir_resolution_spec.lua  test_lazy_async_bug.sh  version_spec.lua
.scripts/: ala.color  ala.opacity  aria  crontab_explain.pl  diff.cb  download.gist  dunst.reload  echoerr  echoserver  encrypt.aes256  exit.code  extract  fail  fail.random  fco  fish.functions  font.nerdfont_patch  fzfimg.sh  gdac  ghq.x  git.fix  git.latest  github.stars  gmail  go.install  headerlive  ip.public  key.xmodmap_reset  lock  log.daily  lsp.debug  lsp.install  mman  neuron.clear  neuron.install  neuron.txt_to_md  neuron.txt_to_md_entr  notsodeep.load  npm.install  pip.install  (+31 more)
.ssh/: config
.tmux/: tmux-256color
.w3m/: keymap
@/: Dockerfile  Dockerfile-nix  container  container-light  sync  update
src/: go.mod  go.sum
surfingkeys/: config.js
(+2828 files in other folders)
