[package]
name = "fff-c"
version = "0.6.4"
edition = "2024"
description = "Raw C api of FFF file finder"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
default = []
zlob = ["fff/zlob"]

[dependencies]
mimalloc.workspace = true
tracing.workspace = true
git2.workspace = true

fff = { package = "fff-search", path = "../fff-core" , version = "0.6.4" }
fff-query-parser = { path = "../fff-query-parser" , version = "0.6.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
