[package]
name = "fff-mcp"
version = "0.6.4"
edition = "2024"
description = "MCP server for FFF file finder - drop-in replacement for AI code assistant search tools"
license = "MIT"

[[bin]]
name = "fff-mcp"
path = "src/main.rs"

[features]
default = ["zlob"]
zlob = ["fff/zlob"]

[dependencies]
fff = { package = "fff-search", path = "../fff-core", default-features = false , version = "0.6.4" }
fff-query-parser = { path = "../fff-query-parser", default-features = false , version = "0.6.4" }
mimalloc = { workspace = true }
rmcp = { version = "1.1.0", features = ["server", "transport-io"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
git2 = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
