[package]
name = "fff-nvim"
version = "0.6.4"
edition = "2024"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
zlob = ["fff/zlob"]

[[bin]]
name = "test_watcher"
path = "src/bin/test_watcher.rs"

[[bin]]
name = "jemalloc_profile"
path = "src/bin/jemalloc_profile.rs"

[[bin]]
name = "search_profiler"
path = "src/bin/search_profiler.rs"

[[bin]]
name = "bench_search_only"
path = "src/bin/bench_search_only.rs"

[[bin]]
name = "grep_profiler"
path = "src/bin/grep_profiler.rs"

[[bin]]
name = "grep_vs_rg"
path = "src/bin/grep_vs_rg.rs"

[[bin]]
name = "bench_grep_query"
path = "src/bin/bench_grep_query.rs"

[[bin]]
name = "fuzzy_grep_test"
path = "src/bin/fuzzy_grep_test.rs"

[[bin]]
name = "test_memory_leak"
path = "src/bin/test_memory_leak.rs"

[[bin]]
name = "bench_ci_memmem"
path = "src/bin/bench_ci_memmem.rs"

[dependencies]
# Workspace dependencies
ahash = { workspace = true }
rayon = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Local crates
fff = { package = "fff-search", path = "../fff-core", version = "0.6.4", features = [
	"mimalloc-collect",
] }
fff-query-parser = { path = "../fff-query-parser", version = "0.6.4" }

# External dependencies
blake3 = "1.8.2"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4.2"
dirs = "5.0"
git2 = { workspace = true }
glidesort = "0.1"
heed = "0.22.0"
ignore = "0.4.22"
mimalloc = { version = "0.1.47", features = ["local_dynamic_tls"] }
mlua = { version = "0.11.1", features = ["module", "luajit"] }
neo_frizbee = { workspace = true }
notify = "8.1.0"
notify-debouncer-full = "0.6"
once_cell = "1.20.2"
pathdiff = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
smartstring = { version = "1.0.1", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = { version = "0.8", features = ["small_rng"] }
tempfile = "3.8"

[[bench]]
name = "indexing_and_search"
harness = false

[[bench]]
name = "grep_bench"
harness = false

[[bench]]
name = "query_tracker_bench"
harness = false
